--- a/03-screenmatch-jpa/src/main/resources/application.properties
+++ b/03-screenmatch-jpa/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=screenmatch
+# Connection to PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/screenmatch
+spring.datasource.username=postgres
+spring.datasource.password=benites1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+# hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+# spring.jpa.hibernate.ddl-auto=update // para que se cree la tabla automaticamente
