Add Serie entity with JPA annotations and update application properties for automatic table creation

--- a/03-screenmatch-jpa/src/main/resources/application.properties
+++ b/03-screenmatch-jpa/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.password=benites1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 # hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-# spring.jpa.hibernate.ddl-auto=update // para que se cree la tabla automaticamente
+# para que se cree la tabla automaticamente
+spring.jpa.hibernate.ddl-auto=update
