Add getters and setters for Episodio and Serie classes; update Principal to handle episode fetching and saving

--- a/03-screenmatch-jpa/src/main/resources/application.properties
+++ b/03-screenmatch-jpa/src/main/resources/application.properties
@@ -12,3 +12,7 @@ hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 # para que se cree la tabla automaticamente
 spring.jpa.hibernate.ddl-auto=update
+
+# para que se muestren las consultas SQL
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
