--- a/07-api/src/main/resources/application.yml
+++ b/07-api/src/main/resources/application.yml
@@ -1,8 +1,8 @@
-spring.application.name=api
-spring.datasource.url=jdbc:mysql://localhost:3306/vollmed_api
-spring.datasource.username=root
-spring.datasource.password=benites1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring:
+    application:
+        name: api
+    datasource:
+        url: jdbc:mysql://localhost:3306/vollmed_api
+        username: root
+        password: benites1234
+        driver-class-name: com.mysql.cj.jdbc.Driver
