--- a/07-api/src/main/resources/application.yml
+++ b/07-api/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
         username: root
         password: benites1234
         driver-class-name: com.mysql.cj.jdbc.Driver
+    jpa:
+        show-sql: true
+        properties:
+            hibernate:
+                format_sql: true
