--- a/07-api/src/main/resources/application.yml
+++ b/07-api/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
         properties:
             hibernate:
                 format_sql: true
+
+# spring.data.web.pageable.page-parameter=pagina
+# spring.data.web.pageable.size-parameter=tamano
+# spring.data.web.sort.sort-parameter=orden
