--- a/07-api/src/main/resources/application.yml
+++ b/07-api/src/main/resources/application.yml
@@ -16,6 +16,10 @@ server:
     error:
         include-stacktrace: never
 
+api:
+    security:
+        secret: ${JWT_SECRET:secret}
+
 # spring.data.web.pageable.page-parameter=pagina
 # spring.data.web.pageable.size-parameter=tamano
 # spring.data.web.sort.sort-parameter=orden
