--- a/07-api/src/main/resources/application.yml
+++ b/07-api/src/main/resources/application.yml
@@ -20,6 +20,11 @@ api:
     security:
         secret: ${JWT_SECRET:secret}
 
+#logging:
+#    level:
+#        org.springframework.security: DEBUG
+#        org.hibernate: DEBUG
+
 # spring.data.web.pageable.page-parameter=pagina
 # spring.data.web.pageable.size-parameter=tamano
 # spring.data.web.sort.sort-parameter=orden
