--- a/07-api/src/main/resources/application.yml
+++ b/07-api/src/main/resources/application.yml
@@ -20,11 +20,20 @@ api:
     security:
         secret: ${JWT_SECRET:secret}
 
-#logging:
-#    level:
-#        org.springframework.security: DEBUG
-#        org.hibernate: DEBUG
+logging:
+    level:
+        org.springframework.security: DEBUG
+        org.hibernate: DEBUG
 
 # spring.data.web.pageable.page-parameter=pagina
 # spring.data.web.pageable.size-parameter=tamano
 # spring.data.web.sort.sort-parameter=orden
+
+springdoc:
+    api-docs:
+        enabled: true
+        path: /v3/api-docs
+    swagger-ui:
+        enabled: true
+        path: /swagger-ui.html
+    show-actuator: true
