Update test configuration and add MedicoRepository tests for availability scenarios

--- a/07-api/src/main/resources/application-test.yml
+++ b/07-api/src/main/resources/application-test.yml
@@ -1,39 +1,3 @@
 spring:
-    application:
-        name: api
     datasource:
-        url: jdbc:mysql://localhost:3306/vollmed_api
-        username: root
-        password: benites1234
-        driver-class-name: com.mysql.cj.jdbc.Driver
-    jpa:
-        show-sql: true
-        properties:
-            hibernate:
-                format_sql: true
-
-server:
-    error:
-        include-stacktrace: never
-
-api:
-    security:
-        secret: ${JWT_SECRET:secret}
-
-logging:
-    level:
-        org.springframework.security: DEBUG
-        org.hibernate: DEBUG
-
-# spring.data.web.pageable.page-parameter=pagina
-# spring.data.web.pageable.size-parameter=tamano
-# spring.data.web.sort.sort-parameter=orden
-
-springdoc:
-    api-docs:
-        enabled: true
-        path: /v3/api-docs
-    swagger-ui:
-        enabled: true
-        path: /swagger-ui.html
-    show-actuator: true
+        url: jdbc:mysql://localhost:3306/vollmed_api_test
