add: integrate ChatClient and ImageModel in controllers, update application properties for AI configuration

--- a/08-ecomart/src/main/resources/application.properties
+++ b/08-ecomart/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=ecomart
+spring.ai.openai.api-key=${OPENAI_API_KEY:sk-1234567890}
+spring.ai.openai.chat.options.model=gpt-4o-mini
+
+#Error handling
+spring.ai.retry.max-attempts=10
+spring.ai.retry.backoff.initial-interval=2000ms
+spring.ai.retry.backoff.max-interval=10000ms
+
+#Logging
+logging.level.org.springframework.ai.chat.client.advisor=DEBUG
